--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
+    <script src="common.js"></script>
     <script>
         function checkLogin() {
             let user = localStorage.getItem("loggedInUser");
@@ -453,29 +454,15 @@
     </style>
 </head>
 <body onload="checkLogin()">
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
-        </div>
-        <div class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul class="main-nav" id="mainNav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="booking.html">Slot Booking</a></li>
-            <li><a href="team.html">Find a Team</a></li>
-            <li><a href="tournaments.html">Tournaments</a></li>
-            <li><a href="rules.html">Rules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="details.html">Details</a></li>
-            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
-        </ul>
-    </nav>
-    <div id="nav-backdrop"></div>
+    <!-- Include Navigation -->
+    <div id="nav-placeholder"></div>
+    <script>
+        fetch('nav.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('nav-placeholder').innerHTML = data;
+            });
+    </script>
 
     <!-- About Us Section -->
     <div class="section-container">
