--- a/rules.html
+++ b/rules.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
     <script src="common.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script>
         function checkLogin() {
             let user = localStorage.getItem("loggedInUser");
@@ -377,13 +378,26 @@
         .btn:hover {
             background: darkblue;
         }
+
+        .rules-list li {
+            display: flex;
+            align-items: flex-start;
+            gap: 12px;
+            margin-bottom: 12px;
+            font-size: 18px;
+        }
+        .rules-list i {
+            color: #0a2342;
+            font-size: 22px;
+            min-width: 28px;
+            margin-top: 2px;
+        }
     </style>
 </head>
 <body onload="checkLogin()">
-    <!-- Include the standardized navigation -->
+    <!-- Include Navigation -->
     <div id="nav-placeholder"></div>
     <script>
-        // Load the navigation
         fetch('nav.html')
             .then(response => response.text())
             .then(data => {
@@ -396,43 +410,53 @@
         <h1>Rules & Regulations</h1>
         
         <h2>1. General Court Rules</h2>
-        <ul>
-            <li>Only registered users are allowed to book a court.</li>
-            <li>Players must wear proper sports attire and  enter the court bare foot.</li>
-            <li>Food and drinks (except water) are not allowed inside the court.</li>
-            <li>Respect other players and avoid unnecessary disruptions.</li>
+        <ul class="rules-list">
+            <li><i class="fas fa-user-check"></i>Only registered users are allowed to book a court.</li>
+            <li><i class="fas fa-tshirt"></i>Players must wear proper sports attire and enter the court bare foot.</li>
+            <li><i class="fas fa-ban"></i>Food and drinks (except water) are not allowed inside the court.</li>
+            <li><i class="fas fa-handshake"></i>Respect other players and avoid unnecessary disruptions.</li>
         </ul>
 
         <h2>2. Booking & Cancellation</h2>
-        <ul>
-            <li>Each player can book a maximum of one slot per day.</li>
-            <li>Bookings must be made at least 10 minutes before the slot starts.</li>
-            <li>If you cannot attend, cancel your booking at least 30 minutes before.</li>
-            <li>Repeated no-shows may lead to temporary suspension.</li>
+        <ul class="rules-list">
+            <li><i class="fas fa-calendar-day"></i>Each player can book a maximum of one slot per day.</li>
+            <li><i class="fas fa-clock"></i>Bookings must be made at least 10 minutes before the slot starts.</li>
+            <li><i class="fas fa-times-circle"></i>If you cannot attend, cancel your booking at least 30 minutes before.</li>
+            <li><i class="fas fa-user-slash"></i>Repeated no-shows may lead to temporary suspension.</li>
         </ul>
 
         <h2>3. Gameplay Etiquette</h2>
-        <ul>
-            <li>Each match is limited to 60 minutes.</li>
-            <li>Follow fair play rules and resolve disputes amicably.</li>
-            <li>Bring your personal shuttles; it won't be provided.</li>
+        <ul class="rules-list">
+            <li><i class="fas fa-hourglass-half"></i>Each match is limited to 60 minutes.</li>
+            <li><i class="fas fa-gavel"></i>Follow fair play rules and resolve disputes amicably.</li>
+            <li><i class="fas fa-basketball-ball"></i>Bring your personal shuttles; it won't be provided.</li>
         </ul>
 
         <h2>4. Code of Conduct</h2>
-        <ul>
-            <li>Any kind of misconduct, violence, or disrespect  will result in an immediate ban.</li>
-            <li>Maintain a friendly sportsmanship spirit.</li>
-            <li>Follow the guidance of the court staff at all times.</li>
-            <li> DO not use Cell phone </li>
-            <li> You are under CC TV surveillance </li>
-        <li> No shouting </li>
-            <li>  No Group sitting and disturbing </li>
-               <li> No Bettings
-                </li>
+        <ul class="rules-list">
+            <li><i class="fas fa-ban"></i>Any kind of misconduct, violence, or disrespect will result in an immediate ban.</li>
+            <li><i class="fas fa-smile"></i>Maintain a friendly sportsmanship spirit.</li>
+            <li><i class="fas fa-user-shield"></i>Follow the guidance of the court staff at all times.</li>
+            <li><i class="fas fa-mobile-alt"></i>DO not use Cell phone</li>
+            <li><i class="fas fa-video"></i>You are under CC TV surveillance</li>
+            <li><i class="fas fa-volume-mute"></i>No shouting</li>
+            <li><i class="fas fa-users-slash"></i>No Group sitting and disturbing</li>
+            <li><i class="fas fa-coins"></i>No Bettings</li>
         </ul>
 
         <a href="index.html" class="btn">Back to Home</a>
     </div>
+
+    <!-- Chatbot Button -->
+    <!-- Chatbot removed -->
+    <div class="chat-window" id="chatWindow">
+    <!-- Chatbot removed -->
+    <!-- Chat Button -->
+    <!-- Chatbot removed -->
+    <!-- Chat Container -->
+    <!-- Chatbot removed -->
+    <!-- Font Awesome -->
+    <!-- Chatbot Styles -->
+    <!-- Chatbot Script -->
 </body>
 </html>
-
