--- a/team.html
+++ b/team.html
@@ -500,12 +500,28 @@
             }
         }
     </style>
+    <script>
+        function checkLogin() {
+            let user = localStorage.getItem("loggedInUser");
+            if (!user) {
+                alert("You are not logged in. Redirecting to login page.");
+                window.location.href = "login.html";
+            } else {
+                document.getElementById("logoutNav").style.display = "inline";
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem("loggedInUser");
+            alert("You have successfully logged out.");
+            window.location.href = "login.html";
+        }
+    </script>
 </head>
 <body onload="checkLogin()">
-    <!-- Include the standardized navigation -->
+    <!-- Include Navigation -->
     <div id="nav-placeholder"></div>
     <script>
-        // Load the navigation
         fetch('nav.html')
             .then(response => response.text())
             .then(data => {
